Changelog
=========

2.13.21 (unreleased)
--------------------


2.13.20 (2011-08-23)
--------------------

- Fixed incorrect calculation of batches in the second half of the result set
  in sortResults.

2.13.19 (2011-08-20)
--------------------

- Increase plan precision to 4 digits in its string representation.

2.13.18 (2011-07-29)
--------------------

- In the string representation of a catalog plan, round the times to at most
  two digits after the comma.

2.13.17 (2011-07-29)
--------------------

- Put back the `weightedIntersection` optimization but guard against results
  with values and do the appropriate fallback to the weighted version.

2.13.16 (2011-07-24)
--------------------

- Restored preserving score values from ZCTextIndex indices.
  https://bugs.launchpad.net/zope2/+bug/815469

2.13.15 (2011-06-30)
--------------------

- Fixed undefined variables in BooleanIndex inline migration code.

- Fixed BooleanIndex' items method so the ZMI browse view works.

2.13.14 (2011-05-19)
--------------------

- Fixed addition of two LazyCat's if any of them was already flattened.

- Extend BooleanIndex by making the indexed value variable instead of
  hardcoding it to `True`. The indexed value will determine the smaller set
  automatically and choose its best value. An inline switch is done once the
  indexed value set grows larger than 60% of the total length. 60% was chosen
  to avoid constant switching for indexes that have an almost equal
  distribution of `True/False`.

- Substitute catalog entry in UUIDIndex error message.

2.13.13 (2011-05-04)
--------------------

- Optimize `Catalog.updateMetadata` avoiding a `self.uids` lookup and removing
  inline migration code for converting `self.data` from non-IOBTree types.

- In the path index, don't update data if the value hasn't changed.

2.13.12 (2011-05-02)
--------------------

- Optimize DateRangeIndex for better conflict resolution handling. It always