@@ -21,6 +21,11 @@ from Acquisition import Implicit
 from zExceptions import Unauthorized
 from ZODB.POSException import ConflictError
 
+from ..CatalogBrains import _GLOBALREQUEST_INSTALLED
+if _GLOBALREQUEST_INSTALLED:
+    from zope.globalrequest import clearRequest
+    from zope.globalrequest import setRequest
+
 _marker = object()
 
 
@@ -83,6 +88,9 @@ class DummyCatalog(Implicit):
 
     _paths = ['/conflicter', '/happy', '/secret', '/zonked']
 
+    def getPhysicalRoot(self):
+        return aq_parent(self)
+
     def getpath(self, rid):
         return self._paths[rid]
 
@@ -139,6 +147,15 @@ class TestBrains(unittest.TestCase):
         self.root.REQUEST = request
         self.assertEqual(b.getURL(), 'http://superbad.com/conflicter')
 
+    if _GLOBALREQUEST_INSTALLED:
+        def testGetURL_catalog_as_utility(self):
+            request = DummyRequest()
+            b = self._makeBrain(0)
+
+            setRequest(request)
+            self.assertEqual(b.getURL(), 'http://superbad.com/conflicter')
+            clearRequest()
+
     def testGetRID(self):
         b = self._makeBrain(42)
         self.assertEqual(b.getRID(), 42)
@@ -152,6 +169,18 @@ class TestBrains(unittest.TestCase):
         self.assertEqual(b.getObject().REQUEST, request)
         self.assertTrue(aq_base(b.getObject()) is
                         aq_base(self.cat.getobject(1)))
+
+    if _GLOBALREQUEST_INSTALLED:
+        def testGetObjectHappy_catalog_as_utility(self):
+            request = DummyRequest()
+            b = self._makeBrain(1)
+
+            setRequest(request)
+            self.assertEqual(b.getPath(), '/happy')
+            self.assertEqual(b.getObject().REQUEST, request)
+            self.assertTrue(aq_base(b.getObject()) is
+                            aq_base(self.cat.getobject(1)))
+            clearRequest()
 
     def testGetObjectPropagatesConflictErrors(self):
         b = self._makeBrain(0)
